[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://TestScene.gd" type="Script" id=3]

[node name="Node" type="Node"]
script = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_top = -34.0
margin_right = 117.0
text = "Among Us
"

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.380392, 0.239216, 0.160784, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 507, 284 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="ScoreTimer" type="Timer" parent="."]
__meta__ = {
"_editor_description_": ""
}

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="UI" parent="." instance=ExtResource( 2 )]

[connection signal="start_game" from="UI" to="." method="new_game"]
